svolgimento base esercizio

--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
                             reiciendis corporis repudiandae necessitatibus?
                         </p>
                     </div>
-                    <div class="col-12" id="team-cards">
+                    <div class="col-12">
+                        <div id="team-cards" class="row gy-3">
 
+                        </div>
                     </div>
                 </div>
             </div>
@@ -76,6 +78,7 @@
 
     <!-- CUSTOM JS -->
     <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/functions.js"></script>
     <script src="./assets/js/main.js"></script>
 </body>
 
